Fix error message when trying to query the radius and filling in a distance.

--- a/src/main/webapp/WEB-INF/zul/query/search/filterGeo.zul
+++ b/src/main/webapp/WEB-INF/zul/query/search/filterGeo.zul
@@ -35,7 +35,7 @@
 				</template>
 			</listbox>
 			<textbox constraint="/[0-9,.]*/"
-				value="@bind(filters.current.distance)" />
+				value="@bind(filters.current.maxDistance)" />
 		</row>
 	</rows>
 </grid>
