--- a/src/main/webapp/WEB-INF/zul/renderer/edit_general.zul
+++ b/src/main/webapp/WEB-INF/zul/renderer/edit_general.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2012-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -57,6 +57,12 @@
 					<textbox
 						value="@bind(renderer.currentRenderer.resultsFoundText)"
 						cols="50" />
+				</row>
+				<row>
+					<label value="Logout text: " />
+					<textbox
+						value="@bind(renderer.currentRenderer.logoutText)" cols="50" />
+					<cell colspan="2" />
 				</row>
 				<row>
 					<label value="Facet width: " />
