--- a/src/main/webapp/WEB-INF/zul/home.zul
+++ b/src/main/webapp/WEB-INF/zul/home.zul
@@ -16,44 +16,30 @@
 -->
 <window apply="org.zkoss.bind.BindComposer"
 	viewModel="@id('home') @init('com.jaeksoft.searchlib.web.controller.HomeController')">
-	<grid visible="@load(home.adminOrNoUser)" hflex="min">
+	<grid visible="@load(home.adminOrNoUser)">
 		<auxhead>
-			<auxheader colspan="4" label="Create a new index" />
+			<auxheader colspan="3" label="Create a new index" />
 		</auxhead>
-		<columns visible="false">
-			<column align="right" />
-			<column align="left" />
-			<column align="left" />
-			<column width="82px" />
+		<columns>
+			<column label="Index name" />
+			<column label="Template" hflex="min"
+				tooltiptext="@load(home.newIndexTemplate.template.description)" />
+			<column label="Action" hflex="min" />
 		</columns>
 		<rows>
 			<row>
-				<label value="Index name: " />
-				<textbox value="@bind(home.newIndexName)" cols="50" />
-				<label
-					value="Choose a name for the index that will be created" />
-				<cell rowspan="3">
-					<image width="82px" height="79px"
-						src="/images/oss_logo.png" />
-				</cell>
-			</row>
-			<row>
-				<label value="Template: " />
+				<textbox value="@bind(home.newIndexName)" width="100%"
+					tooltiptext="Choose a name for the index that will be created" />
 				<listbox mold="select"
+					tooltiptext="@load(home.newIndexTemplate.template.description)"
 					selectedItem="@bind(home.newIndexTemplate)"
 					model="@load(home.templateList)">
-					<template name="model" var="telist">
+					<template name="model">
 						<listitem
-							label="@load(telist.template.publicName)" />
+							label="@load(each.template.publicName)" />
 					</template>
 				</listbox>
-				<label
-					value="@load(home.newIndexTemplate.template.description)" />
-			</row>
-			<row>
-				<cell />
 				<button label="Create" onClick="@command('onNewIndex')" />
-				<cell />
 			</row>
 		</rows>
 	</grid>
