--- a/src/main/webapp/WEB-INF/zul/crawler/mailbox/edit_general.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/mailbox/edit_general.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2013 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2013-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -23,107 +23,63 @@
 	<rows>
 		<row>
 			<label value="Name: " />
-			<textbox value="@bind(dbCrawlList.currentCrawl.name)"
-				readonly="@load(dbCrawlList.selected)" width="80%" />
+			<textbox value="@bind(mbctrl.currentCrawl.name)"
+				readonly="@load(mbctrl.selected)" cols="30" />
 			<label value="Choose a name" />
 		</row>
 		<row>
-			<label value="Driver class: " />
-			<combobox width="300px" autodrop="true"
-				model="@load(dbCrawlList.driverClassList)" buttonVisible="false"
-				value="@bind(dbCrawlList.currentCrawl.driverClass)">
-				<template name="model">
-					<comboitem label="@load(each)" />
-				</template>
-			</combobox>
-			<label value="Enter the class name of the JDBC driver" />
+			<label value="Server name: " />
+			<textbox value="@bind(mbctrl.currentCrawl.serverName)"
+				cols="50" />
+			<label value="Enter hostname of the mail server" />
 		</row>
 		<row>
-			<label value="JDBC url: " />
-			<textbox value="@bind(dbCrawlList.currentCrawl.url)"
-				width="95%" />
-			<label
-				value="Enter the URL used to connect to the database" />
-		</row>
-		<row>
-			<label value="Isolation level: " />
+			<label value="Protocol: " />
 			<listbox mold="select"
-				selectedItem="@bind(dbCrawlList.currentCrawl.isolationLevel)"
-				model="@load(dbCrawlList.isolationLevels)">
+				selectedItem="@bind(mbctrl.currentCrawl.serverProtocol)"
+				model="@load(mbctrl.serverProtocols)">
 				<template name="model">
 					<listitem label="@load(each)" />
 				</template>
 			</listbox>
-			<label value="Select the isolation level" />
+			<label value="Select the mail protocol" />
+		</row>
+		<row>
+			<label value="Server port: " />
+			<intbox value="@bind(mbctrl.currentCrawl.serverPort)"
+				cols="5" />
+			<label value="Enter TCP port" />
 		</row>
 		<row>
 			<label value="User: " />
-			<textbox value="@bind(dbCrawlList.currentCrawl.user)"
-				width="50%" />
+			<textbox value="@bind(mbctrl.currentCrawl.user)" cols="20" />
 			<label
-				value="Enter the user name for the database connection" />
+				value="Enter the user name for the mailbox connection" />
 		</row>
 		<row>
 			<label value="Password: " />
 			<textbox type="password"
-				value="@bind(dbCrawlList.currentCrawl.password)" width="50%" />
+				value="@bind(mbctrl.currentCrawl.password)" cols="15" />
 			<label
-				value="Enter the password for the database connection" />
+				value="Enter the password for the mailbox connection" />
 		</row>
 		<row>
 			<label value="Language: " />
 			<listbox mold="select"
-				selectedItem="@bind(dbCrawlList.currentCrawl.lang)"
-				model="@load(dbCrawlList.languageEnum)">
+				selectedItem="@bind(mbctrl.currentCrawl.lang)"
+				model="@load(mbctrl.languageEnum)">
 				<template name="model" var="langEnum">
 					<listitem label="@load(langEnum.name)" />
 				</template>
 			</listbox>
-			<label value="Enter the language of the indexed documents" />
+			<label
+				value="Enter the default language of the indexed documents" />
 		</row>
 		<row>
 			<label value="Buffer size: " />
 			<intbox cols="5"
-				value="@bind(dbCrawlList.currentCrawl.bufferSize)" />
+				value="@bind(mbctrl.currentCrawl.bufferSize)" />
 			<label value="Enter the size of the buffer" />
-		</row>
-		<row>
-			<label value="Primary key: " />
-			<textbox value="@bind(dbCrawlList.currentCrawl.primaryKey)"
-				width="50%" />
-			<label
-				value="Enter the primary key to identify unique document" />
-		</row>
-		<row>
-			<label value="Unique key (for deletion): " />
-			<textbox
-				value="@bind(dbCrawlList.currentCrawl.uniqueKeyDeleteField)"
-				width="50%" />
-			<label
-				value="Enter the name of the column containing the unique key for documents to delete" />
-		</row>
-		<row>
-			<label value="SQL Select: " />
-			<textbox rows="10"
-				value="@bind(dbCrawlList.currentCrawl.sqlSelect)" width="95%" />
-			<label value="Enter the SQL query to retrieve data" />
-		</row>
-		<row>
-			<label value="SQL Update: " />
-			<vlayout>
-				<textbox rows="5"
-					value="@bind(dbCrawlList.currentCrawl.sqlUpdate)" width="95%" />
-
-				<listbox mold="select"
-					selectedItem="@bind(dbCrawlList.currentCrawl.sqlUpdateMode)"
-					model="@load(dbCrawlList.sqlUpdateModes)">
-					<template name="model">
-						<listitem label="@load(each)" />
-					</template>
-				</listbox>
-			</vlayout>
-			<label
-				value="Enter any SQL query which be called for each indexed item ($PK) " />
 		</row>
 	</rows>
 </grid>
