--- a/src/main/webapp/WEB-INF/zul/crawler/mailbox/index.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/mailbox/index.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2013 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2013-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
